set html, min-width to 400 to resolve the issue where the call out text was extending beyond the mast and overlapping other content. I think because of our speaker and sponsor images sizes, the screen cannot be less than 400px wide, and when it is the text wrapping etc does not work right.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html{
+    min-width: 400px;
+}
 body {
     font-family: 'Enriqueta', serif;
     font-size: 18px;
@@ -79,7 +82,8 @@ header h2 {
     width: 545px;
 }
 
-@media (max-width: 622px) {
+@media (max-width: 622px)
+{
     .mast .callout{
         width: auto;
         height: auto;
